# r3d

./: .gitattributes  .gitignore  CLAUDE.md  CMakeLists.txt  CMakeSettings.json  README.md  main.cpp  main.hpp
assets/: untitled.mtl  uvtemplate.dds
common/: controls.hpp  objLoader.cpp
r3d/: r3d.cpp  r3d.hpp  scene.cpp  scene.hpp
r3d/component/: behaviour.cpp  behaviour.hpp  component.cpp  component.hpp  mesh_renderer.cpp  mesh_renderer.hpp  render_object.cpp  render_object.hpp
r3d/core/: behaviour.cpp  behaviour.hpp  bounds.hpp  camera.cpp  camera.hpp  constants.cpp  constants.hpp  controls.cpp  controls.hpp  game_object.cpp  game_object.hpp  gl_includes.hpp  gl_window.cpp  gl_window.hpp  light.cpp  light.hpp  material.cpp  material.hpp  mesh.hpp  mesh_renderer.cpp  mesh_renderer.hpp  object.cpp  object.hpp  scene.cpp  scene.hpp  shader.cpp  shader.hpp  time.cpp  time.hpp  utils.cpp  utils.hpp
r3d/lib/: stb_image.h
r3d/load/: loadMesh.cpp  loadMesh.hpp  loadShaders.cpp  loadShaders.hpp  loadTexture.cpp  loadTexture.hpp  load_mesh.cpp  load_mesh.hpp  load_shader.cpp  load_shader.hpp  load_shaders.cpp  load_shaders.hpp  load_texture.cpp  load_texture.hpp
r3d/primitive/: skybox.cpp  skybox.hpp
r3d/render/: gl_includes.hpp  gl_window.cpp  material.hpp  mesh_renderer.cpp  mesh_renderer.hpp  shader.cpp  shader.hpp
r3d/shaders/: color_frag.fragmentshader  color_vert.vertexshader  diffuse_color.frag  diffuse_color.vert  diffuse_frag.fragmentshader  diffuse_texture.frag  diffuse_texture.fragmentshader  diffuse_texture.vert  diffuse_texture.vertexshader  diffuse_texture.vs  diffuse_texture_bump.frag  diffuse_texture_bump.vert  texture_frag.fragmentshader  texture_vert.vertexshader  ui_text.frag  ui_text.vert  unlit_color.vert  unlit_color.vertexshader  unlit_texture.frag  unlit_texture.fragmentshader  unlit_texture.fs  unlit_texture.vert  unlit_texture.vertexshader  unlit_texture.vs  unlit_vert_color.fragmentshader  unlit_vert_color.fs  unlit_vert_color.vertexshader
r3d/ui/: canvas.cpp  canvas.hpp  canvas_object.hpp  font.cpp  font.hpp  text.cpp  text.hpp  ui.cpp  ui.hpp
r3d/util/: debug.cpp  debug.hpp  file.cpp  stats.cpp  stats.hpp
r3d/utils/: fps.cpp  fps.hpp
resources/shaders/: diffuse_color.vert  diffuse_texture.vert  diffuse_texture_bump.frag  diffuse_texture_bump.vert  unlit_color.frag  unlit_color.vert  unlit_skybox.frag  unlit_skybox.vert  unlit_texture.frag
shaders/: diffuse_frag.fragmentshader  diffuse_vert.vertexshader
